--- a/public/css/main-frontend.css
+++ b/public/css/main-frontend.css
@@ -1,6 +1,6 @@
-body{
-    font-family: 'Oswald',Helvetica,Arial,Lucida,sans-serif;
-}
+/*body{*/
+    /*font-family: 'Oswald',Helvetica,Arial,Lucida,sans-serif;*/
+/*}*/
 
 .nav{
     padding: 5px;
