--- a/public/css/main-frontend.css
+++ b/public/css/main-frontend.css
@@ -1,6 +1,39 @@
 /*body{*/
     /*font-family: 'Oswald',Helvetica,Arial,Lucida,sans-serif;*/
 /*}*/
+.pro_status {
+
+    -webkit-animation: color-change 1s infinite;
+    -moz-animation: color-change 1s infinite;
+    -o-animation: color-change 1s infinite;
+    -ms-animation: color-change 1s infinite;
+    animation: color-change 1s infinite;
+}
+@-webkit-keyframes color-change {
+    0% { color: red; }
+    50% { color: blue; }
+    100% { color: red; }
+}
+@-moz-keyframes color-change {
+    0% { color: red; }
+    50% { color: blue; }
+    100% { color: red; }
+}
+@-ms-keyframes color-change {
+    0% { color: red; }
+    50% { color: blue; }
+    100% { color: red; }
+}
+@-o-keyframes color-change {
+    0% { color: red; }
+    50% { color: blue; }
+    100% { color: red; }
+}
+@keyframes color-change {
+    0% { color: red; }
+    50% { color: blue; }
+    100% { color: red; }
+}
 
 .nav{
     padding: 5px;
@@ -137,16 +170,15 @@ a {
 .adv span{
     font-size: 8px;
 }
-    .adv span img{
-        width: 70%;
-    }
-    .cart span{
-        font-size: 15px;
-    }
+.adv span img{
+   width: 70%;
+}
+.cart span{
+    font-size: 15px;
+}
+.tracking img{
+    width: 30px;
+}
 .ui-helper-hidden-accessible { display:none; }
-
-
-
-
 
 }
