--- a/public/css/main-frontend.css
+++ b/public/css/main-frontend.css
@@ -1,6 +1,9 @@
 /*body{*/
     /*font-family: 'Oswald',Helvetica,Arial,Lucida,sans-serif;*/
 /*}*/
+body{
+    font-family: 'Ubuntu', sans-serif;
+}
 .pro_status {
 
     -webkit-animation: color-change 1s infinite;
@@ -180,5 +183,19 @@ a {
     width: 30px;
 }
 .ui-helper-hidden-accessible { display:none; }
+
+}
+
+
+@media only screen and (max-width: 767px) {
+    .carousel-item img{
+        height: 170px;
+    }
+
+}
+@media only screen and (min-width: 768px) {
+    .carousel-item img{
+        height: 338px;
+    }
 
 }
