--- a/public/css/footer_css.css
+++ b/public/css/footer_css.css
@@ -11,7 +11,7 @@ section .section-title {
     text-transform: uppercase;
 }
 #footer {
-    background: #79bb2a !important;
+    background: #008000 !important;
 }
 #footer h5{
     padding-left: 10px;
